// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ResultsConcepts correctly with hits 1`] = `
<main
  id="content"
>
  <section
    className="row mb-3"
  >
    <div
      className="col-6 col-lg-4"
    />
    <div
      className="col-6 col-lg-4 offset-lg-4"
    >
      <div
        className="d-flex justify-content-end"
      >
        <Button
          className="fdk-button fdk-button-black-toggle selected"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Relevance
        </Button>
        <Button
          className="fdk-button fdk-button-black-toggle"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Recently published
        </Button>
      </div>
    </div>
  </section>
  <section
    className="row"
  >
    <aside
      className="search-filters col-lg-4"
    >
      <div
        className="d-none d-lg-block"
      >
        <span
          aria-hidden="false"
          className="uu-invisible"
        >
          Filtrering tilgang
        </span>
        <FilterPills
          history={
            Object {
              "push": [Function],
            }
          }
          location={
            Object {
              "search": "",
            }
          }
          locationSearch={Object {}}
          losItems={null}
          publishers={null}
          themesItems={null}
        />
        <div>
          <Modal
            autoFocus={true}
            backdrop={true}
            backdropTransition={
              Object {
                "mountOnEnter": true,
                "timeout": 150,
              }
            }
            centered={false}
            fade={true}
            isOpen={false}
            keyboard={true}
            modalTransition={
              Object {
                "timeout": 300,
              }
            }
            onClosed={[Function]}
            onOpened={[Function]}
            role="dialog"
            toggle={[Function]}
            zIndex={1050}
          >
            <ModalHeader
              closeAriaLabel="Close"
              tag="h5"
              toggle={[Function]}
              wrapTag="div"
            >
              Filter
            </ModalHeader>
            <ModalBody
              tag="div"
            >
              <div
                className="search-filters"
              >
                <FilterTree
                  activeFilter={null}
                  aggregations={Array []}
                  handleFiltering={[Function]}
                  referenceDataItems={null}
                  title="Organization"
                />
              </div>
            </ModalBody>
            <ModalFooter
              tag="div"
            >
              <Button
                className="fdk-button-default fdk-button"
                color="secondary"
                onClick={[Function]}
                tag="button"
              >
                Close
              </Button>
            </ModalFooter>
          </Modal>
          <FilterTree
            activeFilter={null}
            aggregations={Array []}
            handleFiltering={[Function]}
            referenceDataItems={null}
            title="Organization"
          />
        </div>
      </div>
    </aside>
    <section
      className="col-lg-8"
    >
      <ConceptsHitItem
        concepts={null}
        fadeInCounter={0}
        onAddConcept={[Function]}
        onDeleteConcept={[Function]}
        result={
          Object {
            "_id": "https://data-david.github.io/Begrep/begrep/Enhet",
            "_index": "scat",
            "_score": 1,
            "_source": Object {
              "creator": Object {
                "id": "974760673",
                "naeringskode": Object {
                  "code": "84.110",
                  "prefLabel": Object {
                    "no": "Generell offentlig administrasjon",
                  },
                  "uri": "http://www.ssb.no/nace/sn2007/84.110",
                },
                "name": "Brønnøysundregistrene",
                "orgPath": "/STAT/912660680/974760673",
                "organisasjonsform": "ORGL",
                "overordnetEnhet": "912660680",
                "sektorkode": Object {
                  "code": "6100",
                  "prefLabel": Object {
                    "no": "Statsforvaltningen",
                  },
                  "uri": "http://www.brreg.no/sektorkode/6100",
                },
                "type": "no.dcat.datastore.domain.dcat.Publisher",
                "uri": "http://data.brreg.no/enhetsregisteret/enhet/974760673",
                "valid": true,
              },
              "datasets": Array [
                Object {
                  "description": Object {
                    "en": "Central Coordinating Register for Legal Entities is a register containing information on all legal entities in Norway - commercial enterprises and government agencies. Includes also businesses sole proprietorships, associations and other economic entities without registration duty, who have chosen to join the CCR on a voluntary basis.",
                    "nb": "Enhetsregisteret inneholder oversikt over alle registrerte enheter Norge innen næringsliv, offentlig og frivillig sektor. Enhetsregisteret tildeler organisasjonsnummer, og samordner opplysninger om næringsliv og offentlige etater som finnes i ulike offentlige registre.",
                  },
                  "id": "b3abe917-f2c6-4bda-8e17-8982f95ba11f",
                  "title": Object {
                    "en": "Central Coordinating Register for Legal Entities",
                    "nb": "Enhetsregisteret",
                  },
                  "uri": "http://data.brreg.no/datakatalog/dataset/974760673/2",
                },
              ],
              "definition": Object {
                "no": "alt som er registrert med et organisasjonsnummer ",
              },
              "identifier": "https://data-david.github.io/Begrep/begrep/Enhet",
              "inScheme": Array [
                "http://data-david.github.io/vokabular/Befolkning",
              ],
              "note": Object {
                "no": "Alle hovedenheter, underenheter og organisasjonsledd som er identifisert med et organisasjonsnummer.",
              },
              "prefLabel": Object {
                "no": "enhet",
              },
              "source": "https://jira.brreg.no/browse/BEGREP-208",
              "uri": "https://data-david.github.io/Begrep/begrep/Enhet",
            },
            "_type": "subject",
          }
        }
      />
      <ConceptsHitItem
        concepts={null}
        fadeInCounter={0}
        onAddConcept={[Function]}
        onDeleteConcept={[Function]}
        result={
          Object {
            "_id": "https://data-david.github.io/Begrep/begrep/Organisasjonsnummer",
            "_index": "scat",
            "_score": 1,
            "_source": Object {
              "altLabel": Array [
                Object {
                  "no": "Orgid",
                },
                Object {
                  "no": "Orgnr",
                },
              ],
              "datasets": Array [
                Object {
                  "description": Object {
                    "nb": "Akvakulturregisteret inneholder oversikt over akvakulturtillatelser og enkelte vesentlige vedtak knyttet til disse. I tillegg inneholder registeret en oversikt over overføringer, pantsettelser og andre rettigheter som er tinglyst på tillatelsene.",
                  },
                  "id": "631b8f86-530e-44f0-b0b6-cad948c6b9b6",
                  "title": Object {
                    "en": "Aquaculture register",
                    "nb": "Akvakulturregisteret",
                  },
                  "uri": "http://data.brreg.no/datakatalog/dataset/974760673/5",
                },
                Object {
                  "description": Object {
                    "en": "Register of clubs and associations. The purpose is to improve and simplify the interaction between NGOs and public authorities. The Registry will ensure systematic information that can strengthen the legitimacy and knowledge of the voluntary activity. Managed by Brønnøysund Registre",
                    "nb": "Frivillighetsregisteret har oversikt over lag og foreninger i Norge, og har som formål å forenkle samhandlingen mellom frivillige organisasjoner og offentlig sektor. De som registrerer seg i Frivillighetsregisteret kan delta i grasrotandelen til Norsk Tipping, og motta/få momskompensasjon.",
                  },
                  "id": "6d71993e-4c9b-4d5b-9f57-c7f2cea1037b",
                  "title": Object {
                    "nb": "Frivillighetsregisteret",
                  },
                  "uri": "http://data.brreg.no/datakatalog/dataset/974760673/10",
                },
                Object {
                  "description": Object {
                    "nb": "Partiregisteret er et register over politiske parti i Norge. Hovedformålet med registeret er å gi part anledning til å skaffe seg enerett på partinavn.",
                  },
                  "id": "4abdf712-1c9d-49b9-b5f9-6c67a8983eda",
                  "title": Object {
                    "nb": "Partiregisteret",
                  },
                  "uri": "http://data.brreg.no/datakatalog/dataset/974760673/7",
                },
                Object {
                  "description": Object {
                    "nb": "Registeret for utøvere av alternativ behandling inneholder opplysninger om registrerte utøvere og godkjente utøverorganisasjoner. Registeret skal bidra med å vareta pasientvernet og forbrukerrettighetene for den som oppsøker en registrert alternativ behandler. I tillegg skal registeret medvirke til seriøsitet og ordnede forretningsvilkår",
                  },
                  "id": "e063a919-d4ba-4b78-9fe3-0c114cbcef68",
                  "title": Object {
                    "nb": "Registeret for utøvere av alternativ behandling",
                  },
                  "uri": "http://data.brreg.no/datakatalog/dataset/974760673/16",
                },
                Object {
                  "description": Object {
                    "en": "The Register of Business Enterprises registers Norwegian and foreign businesses in Norway, ensuring legal protection and financial overview. All businesses – with confining as well as complete responsibility – are obliged to register in the Register of Business Enterprises. The same applies to sole proprietorships engaging in trade with purchased goods or having more than five fully employed personell. Other sole proprietorships may register on a voluntary basis.",
                    "nb": "Foretaksregisteret registrerer alle norske og utenlandske foretak i Norge, og skal sikre rettsvern og økonomisk oversikt. Enkeltpersonforetak som ikke driver handel med innkjøpte varer eller har mindre enn 5 ansatte i full stilling har ikke registreringsplikt, men har registreringsrett. Foretaksregisteret skal sikre rettsvern og økonomisk oversikt, og er en viktig kilde til informasjon om norsk næringsliv.",
                  },
                  "id": "97093ad6-661a-46f8-b4f6-681998661d03",
                  "title": Object {
                    "en": "Register of Business Enterprises",
                    "nb": "Foretaksregisteret",
                  },
                  "uri": "http://data.brreg.no/datakatalog/dataset/974760673/1",
                },
                Object {
                  "description": Object {
                    "nb": "Løsøreregisteret er et tinglysingsregister for rettigheter og pant i løsøre. En tinglyst rettighet eller pant, gir rettsvern overfor kreditorer. Løsøreregisteret omfatter ikke tinglysning i fast eiendom, skip og luftfartøyer.",
                  },
                  "id": "510ebd85-15f5-40b8-8bad-dfb92234ee2a",
                  "title": Object {
                    "en": "Register of Mortgaged Movable Property",
                    "nb": "Løsøreregisteret",
                  },
                  "uri": "http://data.brreg.no/datakatalog/dataset/974760673/3",
                },
                Object {
                  "description": Object {
                    "nb": "Registeret for offentlig støtte (ROFS) er et nasjonalt register for offentlige støttetildelinger som faller inn under EØS-avtalen. Registeret skal gjøre det enklere for offentlige myndigheter, som vurderer å gi offentlig støtte, å få informasjon om foretakene har fått annen offentlig støtte som må tas med i vurderingen.",
                  },
                  "id": "40000eb2-8bc8-4b63-a371-411c3270b7a0",
                  "title": Object {
                    "nb": "Registeret for offentlig støtte",
                  },
                  "uri": "http://data.brreg.no/datakatalog/dataset/974760673/15",
                },
                Object {
                  "description": Object {
                    "en": "The Register of Company Accounts receives yearly about 315 000 annual accounts from limited companies, saving banks, insurance companies and other accounting obligation companies in Norway. The yearly accounts contains accounting numbers in electronic formats. In addition attachments includes the annula report of the board, and notes, cash flow and auditors report where needed. All yearly accounts is availiable for everyone, and the most important datasource for everyone that wish to get understand the financial situation for Norwegian businesses.",
                    "nb": "Regnskapsregisteret mottar årlig ca 315 000 (pr år 2017) årsregnskap fra aksjeselskaper, sparebanker, forsikringsselskaper og andre regnskapspliktige foretak i Norge. Årsregnskapene inneholder regnskapstall i elektronisk form. I tillegg er det vedlagt styrets årsberetning, noter, kontantstrømanalyse og revisors beretning, hvor dette kreves.",
                  },
                  "id": "1a3eda0a-4710-4209-8e9f-eb9d709f1540",
                  "title": Object {
                    "en": "Register of Company Accounts",
                    "nb": "Regnskapsregisteret",
                  },
                  "uri": "http://data.brreg.no/datakatalog/dataset/974760673/4",
                },
              ],
              "definition": Object {
                "no": "Et nisifret nummer som tildeles av Enhetsregisteret for en organisasjon som skal operere som en offentlig aktør",
              },
              "identifier": "https://data-david.github.io/Begrep/begrep/Organisasjonsnummer",
              "prefLabel": Object {
                "no": "organisasjonsnummer",
              },
              "uri": "https://data-david.github.io/Begrep/begrep/Organisasjonsnummer",
            },
            "_type": "subject",
          }
        }
      />
    </section>
    <section
      className="col-lg-8 offset-lg-4 d-flex justify-content-center"
    >
      <span
        aria-hidden="false"
        className="uu-invisible"
      >
        Sidepaginering.
      </span>
      <PaginationBoxView
        activeClassName="active"
        breakClassName="break-me"
        breakLabel={
          <span>
            ...
          </span>
        }
        containerClassName="pagination"
        disableInitialCallback={true}
        disabledClassName="disabled"
        forcePage={0}
        marginPagesDisplayed={1}
        nextClassName="next"
        nextLabel="Neste side"
        onPageChange={[Function]}
        pageCount={1}
        pageRangeDisplayed={2}
        previousClassName="previous"
        previousLabel="Forrige side"
        subContainerClassName="pages pagination"
      />
    </section>
  </section>
</main>
`;

exports[`should render ResultsConcepts correctly with minimum of props 1`] = `
<main
  id="content"
>
  <section
    className="row mb-3"
  >
    <div
      className="col-6 col-lg-4"
    />
    <div
      className="col-6 col-lg-4 offset-lg-4"
    >
      <div
        className="d-flex justify-content-end"
      >
        <Button
          className="fdk-button fdk-button-black-toggle selected"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Relevance
        </Button>
        <Button
          className="fdk-button fdk-button-black-toggle"
          color="primary"
          onClick={[Function]}
          tag="button"
        >
          Recently published
        </Button>
      </div>
    </div>
  </section>
  <section
    className="row"
  >
    <aside
      className="search-filters col-lg-4"
    >
      <div
        className="d-none d-lg-block"
      >
        <span
          aria-hidden="false"
          className="uu-invisible"
        >
          Filtrering tilgang
        </span>
        <FilterPills
          history={
            Object {
              "push": [Function],
            }
          }
          location={
            Object {
              "search": "",
            }
          }
          locationSearch={Object {}}
          losItems={null}
          publishers={null}
          themesItems={null}
        />
      </div>
    </aside>
    <section
      className="col-lg-8"
    />
    <section
      className="col-lg-8 offset-lg-4 d-flex justify-content-center"
    >
      <span
        aria-hidden="false"
        className="uu-invisible"
      >
        Sidepaginering.
      </span>
      <PaginationBoxView
        activeClassName="active"
        breakClassName="break-me"
        breakLabel={
          <span>
            ...
          </span>
        }
        containerClassName="pagination"
        disableInitialCallback={true}
        disabledClassName="disabled"
        forcePage={0}
        marginPagesDisplayed={1}
        nextClassName="next"
        nextLabel="Neste side"
        onPageChange={[Function]}
        pageCount={1}
        pageRangeDisplayed={2}
        previousClassName="previous"
        previousLabel="Forrige side"
        subContainerClassName="pages pagination"
      />
    </section>
  </section>
</main>
`;
